@@ -2,6 +2,7 @@
 * added destroy method to V2::scotty_setting proxy model
 * add list call to V2::data_upload, direst_connect_summary to V2::companies, add new proxy model Summary
 * removed the customer_query, transaction_query from scotty_setting model
+* removed date_added from Contact
 
 === 0.5.2 2014-03-06
 
